apps/home-assistant/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - home.talos.froystein.jp
  rules:
    - backendRefs:
        - name: home-assistant
          port: 8123
